@@ -3,8 +3,8 @@ package com.assigment_1;
 import java.util.Arrays;
 
 //in out:
-//java com.assigment_1.TestClient Peer1 BACKUP "/home/filipasenra/Desktop/Sem título 1.odt" 2
-//java com.assigment_1.TestClient Peer1 DELETE "/home/filipasenra/Desktop/Sem título 1.odt"
+//java --module-path $PATH_TO_FX --add-modules javafx.controls com.assigment_1.TestClient Peer1 BACKUP "/home/filipasenra/Desktop/Sem título 1.odt" 2
+//java --module-path $PATH_TO_FX --add-modules javafx.controls com.assigment_1.TestClient Peer1 DELETE "/home/filipasenra/Desktop/Sem título 1.odt"
 //java com.assigment_1.TestClient Peer1 BACKUP "C:\Users\claud\Ambiente de Trabalho\adeus.txt" 2
 
 public class TestClient {
